kubernetes/fabadawordpress/wordpress/03_deployment.yml
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  replicas: 3
  selector:
    matchLabels:
      service: wordpress
  template:
    metadata:
      labels:
        service: wordpress
    spec:
      containers:
      - image: wordpress
        name: wordpress
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 3
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            memory: 1024Mi
            cpu: 2000m
          requests:
            memory: 128Mi
            cpu: 250m
        ports:
        - containerPort: 80
          name: http
