kubernetes/fabadawordpress/wordpress/05_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    service: wordpress
spec:
  ports:
    - port: 80
  selector:
    service: wordpress
  clusterIP: None
